--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~12.0.2",
     "animejs": "^3.2.1",
     "body-parser": "^1.19.0",
+    "core-js": "^3.12.0",
     "cors": "^2.8.5",
     "dotenv": "^5.0.1",
     "express": "^4.17.1",
@@ -28,6 +29,7 @@
     "ol": "^6.5.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
