--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "uuid": "^8.3.2",
+    "validator": "^13.6.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
