--- a/Backend/Node/package.json
+++ b/Backend/Node/package.json
@@ -13,7 +13,8 @@
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "http-errors": "^1.7.2",
-        "mongoose": "^5.12.13"
+        "mongoose": "^5.12.13",
+        "morgan": "^1.10.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.12"
