--- a/Backend/Node/config/.env
+++ b/Backend/Node/config/.env
@@ -2,3 +2,5 @@ DATABASE="mongodb+srv://haritsfai713:<DATABASE_PASSWORD>@cluster0.s4b2n.mongodb.
 DATABASE_PASSWORD=711320
 
 PORT=3000
+
+JWT_SECRET_STRING="catra-danadyaksa-merupakan-gcs-aksantara-tahun-2021-yeay"
