--- a/Backend/Node/package.json
+++ b/Backend/Node/package.json
@@ -9,10 +9,11 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "body-parser": "^1.19.0",
+        "bcrypt": "^5.0.1",
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "http-errors": "^1.7.2",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.12.13",
         "morgan": "^1.10.0"
     },
