--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@angular/router": "~12.0.2",
     "animejs": "^3.2.1",
     "core-js": "^3.12.0",
+    "mavlink": "^1.0.1",
     "ol": "^6.5.0",
     "rxjs": "~6.6.0",
+    "stream-browserify": "^2.0.2",
+    "timers-browserify": "^2.0.12",
     "tslib": "^2.1.0",
     "uuid": "^8.3.2",
     "validator": "^13.6.0",
@@ -33,7 +36,7 @@
     "@angular/compiler-cli": "~12.0.2",
     "@types/animejs": "^3.1.3",
     "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.18",
     "@types/ol": "^6.5.1",
     "jasmine-core": "~3.7.0",
     "karma": "~6.3.0",
