--- a/package.json
+++ b/package.json
@@ -1,50 +1,60 @@
 {
-  "name": "gcsapp21",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~12.0.2",
-    "@angular/common": "~12.0.2",
-    "@angular/compiler": "~12.0.2",
-    "@angular/core": "~12.0.2",
-    "@angular/forms": "~12.0.2",
-    "@angular/platform-browser": "~12.0.2",
-    "@angular/platform-browser-dynamic": "~12.0.2",
-    "@angular/router": "~12.0.2",
-    "animejs": "^3.2.1",
-    "core-js": "^3.12.0",
-    "mavlink": "^1.0.1",
-    "ol": "^6.5.0",
-    "rxjs": "~6.6.0",
-    "stream-browserify": "^2.0.2",
-    "timers-browserify": "^2.0.12",
-    "tslib": "^2.1.0",
-    "uuid": "^8.3.2",
-    "validator": "^13.6.0",
-    "zone.js": "~0.11.4"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~12.0.2",
-    "@angular/cli": "~12.0.2",
-    "@angular/compiler-cli": "~12.0.2",
-    "@types/animejs": "^3.1.3",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.20.18",
-    "@types/ol": "^6.5.1",
-    "jasmine-core": "~3.7.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "parcel-bundler": "^1.9.4",
-    "typescript": "~4.2.3"
-  }
+    "name": "gcsapp21",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "node ./Backend/Node/server.js",
+        "build": "ng build",
+        "watch": "ng build --watch --configuration development",
+        "test": "ng test",
+        "heroku-postbuild": "ng build --prod"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "~12.0.2",
+        "@angular/cli": "~12.0.2",
+        "@angular/common": "~12.0.2",
+        "@angular/compiler": "~12.0.2",
+        "@angular/compiler-cli": "~12.0.2",
+        "@angular/core": "~12.0.2",
+        "@angular/forms": "~12.0.2",
+        "@angular/platform-browser": "~12.0.2",
+        "@angular/platform-browser-dynamic": "~12.0.2",
+        "@angular/router": "~12.0.2",
+        "animejs": "^3.2.1",
+        "core-js": "^3.12.0",
+        "express": "^4.17.1",
+        "mavlink": "^1.0.1",
+        "ol": "^6.5.0",
+        "path": "^0.12.7",
+        "rxjs": "~6.6.0",
+        "stream-browserify": "^2.0.2",
+        "timers-browserify": "^2.0.12",
+        "tslib": "^2.1.0",
+        "typescript": "~4.2.3",
+        "uuid": "^8.3.2",
+        "validator": "^13.6.0",
+        "zone.js": "~0.11.4"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~12.0.2",
+        "@angular/cli": "~12.0.2",
+        "@angular/compiler-cli": "~12.0.2",
+        "@types/animejs": "^3.1.3",
+        "@types/jasmine": "~3.6.0",
+        "@types/node": "^12.20.18",
+        "@types/ol": "^6.5.1",
+        "jasmine-core": "~3.7.0",
+        "karma": "~6.3.0",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage": "~2.0.3",
+        "karma-jasmine": "~4.0.0",
+        "karma-jasmine-html-reporter": "^1.5.0",
+        "parcel-bundler": "^1.9.4",
+        "typescript": "~4.2.3"
+    },
+    "engines": {
+        "node": "14.16.0",
+        "npm": "7.20.1"
+    }
 }
