--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@angular/router": "~12.0.2",
         "animejs": "^3.2.1",
         "core-js": "^3.12.0",
+        "dotenv": "^5.0.1",
         "express": "^4.17.1",
         "mavlink": "^1.0.1",
         "ol": "^6.5.0",
