--- a/Backend/Node/package.json
+++ b/Backend/Node/package.json
@@ -15,11 +15,10 @@
         "express": "^4.17.1",
         "http-errors": "^1.7.2",
         "jsonwebtoken": "^8.5.1",
-        "mongoose": "^5.13.5",
         "morgan": "^1.10.0"
     },
     "devDependencies": {
-        "nodemon": "^2.0.12",
-        "mongoose": "^5.13.5"
+        "mongoose": "^5.13.5",
+        "nodemon": "^2.0.12"
     }
 }
