--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "dotenv": "^5.0.1",
         "express": "^4.17.1",
         "mavlink": "^1.0.1",
+        "mongoose": "^5.13.5",
         "ol": "^6.5.0",
         "path": "^0.12.7",
         "rxjs": "~6.6.0",
