--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "express": "^4.17.1",
         "mavlink": "^1.0.1",
         "mongoose": "^5.13.5",
+        "morgan": "^1.10.0",
         "ol": "^6.5.0",
         "path": "^0.12.7",
         "rxjs": "~6.6.0",
