--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
         "@angular/platform-browser-dynamic": "~12.0.2",
         "@angular/router": "~12.0.2",
         "animejs": "^3.2.1",
+        "bcrypt": "^5.0.1",
         "core-js": "^3.12.0",
+        "cors": "^2.8.5",
         "dotenv": "^5.0.1",
         "express": "^4.17.1",
+        "http-errors": "^1.7.2",
+        "jsonwebtoken": "^8.5.1",
         "mavlink": "^1.0.1",
         "mongoose": "^5.13.5",
         "morgan": "^1.10.0",
