--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "gcsapp21",
+    "name": "GCSapp21",
     "version": "0.0.0",
     "scripts": {
         "ng": "ng",
-        "start": "node ./Backend/Node/server.js",
-        "build": "ng build",
+        "start": "node server.js",
+        "build": "ng build --prod",
         "watch": "ng build --watch --configuration development",
         "test": "ng test",
         "heroku-postbuild": "ng build"
