--- a/angular.json
+++ b/angular.json
@@ -18,8 +18,13 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-builders/custom-webpack:browser",
           "options": {
+            "customWebpackConfig": {
+              "path": "./extra-webpack.config.js",
+              "replaceDuplicatePlugins": true
+           },
+            "allowedCommonJsDependencies": ["timers-browserify", "stream-browserify", "path-browserify"],
             "outputPath": "dist/GCSapp21",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -86,8 +91,13 @@
           }
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
+          "builder": "@angular-builders/custom-webpack:browser",
           "options": {
+            "customWebpackConfig": {
+              "path": "./extra-webpack.config.js",
+              "replaceDuplicatePlugins": true
+           },
+            "allowedCommonJsDependencies": ["timers-browserify", "stream-browserify", "path-browserify"],
             "main": "src/test.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
