--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@angular/platform-browser-dynamic": "~12.0.2",
     "@angular/router": "~12.0.2",
     "animejs": "^3.2.1",
+    "browserify-fs": "^1.0.0",
     "core-js": "^3.12.0",
     "mavlink": "^1.0.1",
     "ol": "^6.5.0",
+    "path-browserify": "^0.0.1",
     "rxjs": "~6.6.0",
     "stream-browserify": "^2.0.2",
     "timers-browserify": "^2.0.12",
@@ -31,6 +33,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^12.1.0",
     "@angular-devkit/build-angular": "~12.0.2",
     "@angular/cli": "~12.0.2",
     "@angular/compiler-cli": "~12.0.2",
