--- a/package.json
+++ b/package.json
@@ -1,58 +1,4 @@
 {
-<<<<<<< HEAD
-  "name": "gcsapp21",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~12.0.2",
-    "@angular/common": "~12.0.2",
-    "@angular/compiler": "~12.0.2",
-    "@angular/core": "~12.0.2",
-    "@angular/forms": "~12.0.2",
-    "@angular/platform-browser": "~12.0.2",
-    "@angular/platform-browser-dynamic": "~12.0.2",
-    "@angular/router": "~12.0.2",
-    "animejs": "^3.2.1",
-    "browserify-fs": "^1.0.0",
-    "core-js": "^3.12.0",
-    "mavlink": "^1.0.1",
-    "ol": "^6.5.0",
-    "path-browserify": "^0.0.1",
-    "rxjs": "~6.6.0",
-    "stream-browserify": "^2.0.2",
-    "timers-browserify": "^2.0.12",
-    "tslib": "^2.1.0",
-    "uuid": "^8.3.2",
-    "validator": "^13.6.0",
-    "zone.js": "~0.11.4"
-  },
-  "devDependencies": {
-    "@angular-builders/custom-webpack": "^12.1.0",
-    "@angular-devkit/build-angular": "~12.0.2",
-    "@angular/cli": "~12.0.2",
-    "@angular/compiler-cli": "~12.0.2",
-    "@types/animejs": "^3.1.3",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.20.18",
-    "@types/ol": "^6.5.1",
-    "jasmine-core": "~3.7.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "parcel-bundler": "^1.9.4",
-    "typescript": "~4.2.3"
-  }
-}
-=======
     "name": "GCSapp21",
     "version": "0.0.0",
     "scripts": {
@@ -65,6 +11,7 @@
     },
     "private": true,
     "dependencies": {
+        "@angular-builders/custom-webpack": "^12.1.0",
         "@angular/animations": "~12.0.2",
         "@angular/cli": "~12.0.2",
         "@angular/common": "~12.0.2",
@@ -77,10 +24,12 @@
         "@angular/router": "~12.0.2",
         "animejs": "^3.2.1",
         "bcrypt": "^5.0.1",
+        "browserify-fs": "^1.0.0",
         "core-js": "^3.12.0",
         "cors": "^2.8.5",
         "dotenv": "^5.0.1",
         "express": "^4.17.1",
+        "fs": "^0.0.1-security",
         "http-errors": "^1.7.2",
         "jsonwebtoken": "^8.5.1",
         "mavlink": "^1.0.1",
@@ -111,6 +60,7 @@
         "karma-coverage": "~2.0.3",
         "karma-jasmine": "~4.0.0",
         "karma-jasmine-html-reporter": "^1.5.0",
+        "nan": "^2.15.0",
         "parcel-bundler": "^1.9.4",
         "typescript": "~4.2.3"
     },
@@ -119,4 +69,3 @@
         "npm": "7.20.1"
     }
 }
->>>>>>> b59bb9914d101c9d7df4cb6e045f8c5ca0256bc4
