--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@angular/platform-browser": "~12.0.2",
         "@angular/platform-browser-dynamic": "~12.0.2",
         "@angular/router": "~12.0.2",
+        "@types/socket.io": "^3.0.2",
         "animejs": "^3.2.1",
         "bcrypt": "^5.0.1",
         "browserify-fs": "^1.0.0",
@@ -37,6 +38,7 @@
         "ol": "^6.5.0",
         "path": "^0.12.7",
         "rxjs": "~6.6.0",
+        "socket.io": "^4.1.3",
         "stream-browserify": "^2.0.2",
         "timers-browserify": "^2.0.12",
         "tslib": "^2.1.0",
