--- a/Backend/Node/package.json
+++ b/Backend/Node/package.json
@@ -16,7 +16,8 @@
         "http-errors": "^1.7.2",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.13.5",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "socket.io": "^4.2.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.12"
