--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "path": "^0.12.7",
         "rxjs": "~6.6.0",
         "socket.io": "^4.1.3",
+        "socket.io-client": "^4.2.0",
         "stream-browserify": "^2.0.2",
         "timers-browserify": "^2.0.12",
         "tslib": "^2.1.0",
