--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "@types/jasmine": "~3.6.0",
         "@types/node": "^12.20.18",
         "@types/ol": "^6.5.1",
+        "enhanced-resolve": "^3.3.0",
         "jasmine-core": "~3.7.0",
         "karma": "~6.3.0",
         "karma-chrome-launcher": "~3.1.0",
