--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
         "build": "ng build --prod",
         "watch": "ng build --watch --configuration development",
         "test": "ng test",
-        "postinstall": "ng build --aot -prod"
-        
+        "heroku-postbuild": "ng build"
+
     },
     "private": true,
     "dependencies": {
